<resources>
    <string name="app_name">Silent Echo</string>
    <string name="close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="large_image">Large Profile Image</string>
    <string name="translate_text_to_asl">Translate Text to ASL</string>
    <string name="up_news">Up News</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="name">Name</string>
    <string name="input_name">Input Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="address">Address</string>
    <string name="input_address">Input Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="echo">ECHO</string>
    <string name="silent">SILENT</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_accounts_register_now">Don’t have accounts? Register now!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue">Please Sign in to Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="input_password">Input Password</string>
    <string name="register">REGISTER</string>
    <string name="please_register_to_login">Please Register to Login</string>
    <string name="already_have_accounts_sign_in">Already have accounts? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="pass">Password</string>
    <string name="phone">Phone Number</string>
    <string name="main">Email Address</string>
    <string name="text">Text</string>
    <string name="result">Result</string>
    <string name="submit">Submit</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="news_date">News Date</string>
    <string name="please_enter_the_email_you_use_to_sign_in">Please enter the email you use to sign in</string>
    <string name="mainAddress">Email Address</string>
    <string name="request_password_reset">Request password reset</string>
    <string name="edit_profileButton">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="input_text">Input Text</string>
</resources>