<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageEdit"
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_background" />

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="#2B2E4A"
                android:contentDescription="Back"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />


            <TextView
                android:id="@+id/textEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/edit_profile"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageEdit" />

            <TextView
                android:id="@+id/textViewReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:text="@string/edit_your_profile"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEdit" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="115dp"
                android:layout_height="112dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/edit_profile_icon" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewReg"
                app:srcCompat="@drawable/login_icon" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imageView10"
                app:layout_constraintTop_toBottomOf="@id/textViewReg" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditNama"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/rondedcorner"
                android:hint="@string/input_name"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="24dp"
                android:layout_height="21dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputEditNama"
                app:srcCompat="@drawable/baseline_gender_24" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imageView18"
                app:layout_constraintTop_toBottomOf="@id/textInputEditNama" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
                app:srcCompat="@drawable/baseline_phone_24" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imageView14"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditPhone"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/rondedcorner"
                android:hint="@string/input_phone_number"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputEditPhone"
                app:srcCompat="@drawable/address_icon" />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imageView17"
                app:layout_constraintTop_toBottomOf="@id/textInputEditPhone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditAddress"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/rondedcorner"
                android:ems="10"
                android:hint="@string/input_address"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:gravity="top|start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddress" />


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="147dp"
                android:layout_height="52dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#000080"
                android:text="@string/save_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputEditAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
