<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".view.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageRegister"
            android:layout_width="71dp"
            android:layout_height="74dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_background" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="#2B2E4A"
            android:contentDescription="Back"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="92dp"
            android:layout_height="87dp"
            app:srcCompat="@drawable/register_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageRegister"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <TextView
            android:id="@+id/textViewReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_register_to_login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textReg"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="24dp"
            android:layout_height="21dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewReg"
            app:srcCompat="@drawable/login_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/imageView10"
            app:layout_constraintTop_toBottomOf="@id/textViewReg" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditNama"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/rondedcorner"
            android:hint="Input Name"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="22dp"
            android:layout_height="21dp"
            app:srcCompat="@drawable/email_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditNama"
            android:layout_marginStart="55dp"
            android:layout_marginTop="22dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@id/textInputEditNama"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditEmail"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/rondedcorner"
            android:hint="hello@example.com"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="21dp"
            android:layout_height="21dp"
            app:srcCompat="@drawable/phone_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditEmail"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@id/textInputEditEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditPhone"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/rondedcorner"
            android:hint="Input phone number"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="23dp"
            android:layout_height="22dp"
            app:srcCompat="@drawable/password_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditPhone"
            android:layout_marginStart="55dp"
            android:layout_marginTop="22dp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@id/textInputEditPhone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/rondedcorner"
            android:ems="10"
            android:hint="Input Password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassword" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="147dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#000080"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword2" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/already_have_accounts_sign_in"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSignup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
